--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "fcntl.h": "c",
+        "input.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
