--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -2,7 +2,9 @@
     "files.associations": {
         "stdio.h": "c",
         "fcntl.h": "c",
-        "input.h": "c"
+        "input.h": "c",
+        "stdlib.h": "c",
+        "math.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
