--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -4,7 +4,8 @@
         "fcntl.h": "c",
         "input.h": "c",
         "stdlib.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "unistd.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
